# auction-platform

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.production  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  main.py  pyproject.toml  railway.toml  ruff_errors.txt  ruff_tasks.txt  test_mail.py  test_mail_25.py  test_mail_587.py  test_mail_host.py  test_transfer.py
backend/alembic/: env.py
backend/alembic/versions/: 05f5678d257e_add_processing_to_escrowstatus_enum.py  0c8cac941173_add.py  0e7589e1c450_add_kyc_models_and_user_tier.py  15dffe28db1b_add_ended_reserve_not_met_auction_status.py  195a1220d3fa_added_bio_field_to_seller_profile_table.py  25511f4a4dd1_removed_bid_increment_from_table.py  3a7f2e1d9c84_update_sellertype_enum_individual_business.py  44aea174975d_added_public_id_to_image.py  5d0cccc84f17_.py  6792719e524a_add_payment_table.py  744b92bb280c_add_payment_link_fields_to_payments.py  9bb54b826f56_add_tracking_number_to_orders.py  a1b2c3d4e5f6_add_auction_status_values.py  a30e133eab53_add_paystack_to_paymentprovider_enum.py  a9622f305550_add_category_is_active.py  ce85df6c97df_add_bid_increment_tier.py  d0564e190198_add_public_id_to_dispute_evidence.py  d7ea1591e04b_initial_database_schema.py  e914f9620d06_added_rejection_reason_to_sellerprofile.py  ec69e82b6bd5_add_missing_performance_indexes.py  f970f76c4f3b_added_status_to_sellerprofile.py  fb1bf731c593_add_version_column_to_payments.py
backend/apps/: __init__.py
backend/apps/admin/: dashboard.py  routers.py  setup.py
backend/apps/auctions/: __init__.py  cloudinary_service.py  enums.py  models.py  repository.py  routers.py  schemas.py  service.py  tasks.py
backend/apps/authentication/: __init__.py  jwt_service.py  models.py  repository.py  routers.py  schemas.py  security.py  service.py
backend/apps/bids/: __init__.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
backend/apps/core/: tasks.py
backend/apps/disputes/: __init__.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
backend/apps/escrow/: __init__.py  enums.py  models.py  repository.py  schemas.py  tasks.py
backend/apps/notifications/: __init__.py  enums.py  models.py  repository.py  routers.py  schemas.py  service.py  tasks.py
backend/apps/orders/: __init__.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
backend/apps/payments/: enums.py  flutterwave_service.py  models.py  paystack_service.py  schemas.py
backend/apps/users/: bvn_service.py  enums.py  kyc_models.py  kyc_repository.py  kyc_router.py  kyc_service.py  models.py  repository.py  routers.py  schemas.py  service.py
backend/apps/wallet/: __init__.py  enums.py  models.py  repository.py  routers.py  schemas.py  service.py  tasks.py
backend/common/: __init__.py  dependency.py  email.py  exception_handlers.py  exceptions.py  middleware.py  monitoring.py  pagination.py  permissions.py  rate_limiter.py  sanitisation.py  schemas.py  security_headers.py  utils.py
backend/config/: celery_app.py  database.py  logging_config.py  model_registry.py  production.py  settings.py
backend/scripts/: create_superuser.py  pre_migration_check.py  seed_bid_increment_tiers.py  seed_categories.py
backend/templates/: dashboard.html
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/auctions/: test_auction_duration_cap.py  test_cloudinary_service.py  test_reserve_price.py
backend/tests/authentication/: test_auth_models.py  test_auth_repository.py  test_auth_router.py  test_auth_service.py
docs/: smoke-test.md
(+95 files in other folders)
